--- a/plugins/haskell/Haskell.json.in
+++ b/plugins/haskell/Haskell.json.in
@@ -7,5 +7,16 @@
     \"License\" : \"MIT\",
     \"Description\" : \"Haskell support\",
     \"Url\" : \"https://haskell.org\",
-    $$dependencyList
+    $$dependencyList,
+
+    \"Mimetypes\" : [
+        \"<?xml version=\'1.0\'?>\",
+        \"<mime-info xmlns=\'http://www.freedesktop.org/standards/shared-mime-info\'>\",
+        \"    <mime-type type=\'text/x-haskell-project\'>\",
+        \"        <sub-class-of type=\'text/plain\'/>\",
+        \"        <comment>Haskell Cabal project file</comment>\",
+        \"        <glob pattern=\'*.cabal\'/>\",
+        \"    </mime-type>\",
+        \"</mime-info>\"
+    ]
 }
