--- a/.github/workflows/build_qmake.yml
+++ b/.github/workflows/build_qmake.yml
@@ -3,8 +3,9 @@ name: QMake Build Matrix
 on: [push]
 
 env:
-  QT_VERSION: 5.14.0
-  QT_CREATOR_VERSION: 4.11.0
+  QT_VERSION: 5.14.1
+  QT_CREATOR_VERSION: 4.12.0-beta1
+  QT_CREATOR_SNAPSHOT: latest
   PLUGIN_PRO: haskell.pro
   PLUGIN_NAME: Haskell
 
@@ -114,7 +115,12 @@ jobs:
       shell: cmake -P {0}
       run: |
         string(REGEX MATCH "([0-9]+.[0-9]+).[0-9]+" outvar "$ENV{QT_CREATOR_VERSION}")
-        set(qtc_base_url "https://download.qt.io/official_releases/qtcreator/${CMAKE_MATCH_1}/$ENV{QT_CREATOR_VERSION}")
+
+        set(qtc_base_url "https://download.qt.io/official_releases/qtcreator/${CMAKE_MATCH_1}/$ENV{QT_CREATOR_VERSION}/installer_source")
+        set(qtc_snapshot "$ENV{QT_CREATOR_SNAPSHOT}")
+        if (qtc_snapshot)
+          set(qtc_base_url "https://download.qt.io/snapshots/qtcreator/${CMAKE_MATCH_1}/$ENV{QT_CREATOR_VERSION}/installer_source/${qtc_snapshot}")
+        endif()
 
         if ("${{ runner.os }}" STREQUAL "Windows")
           set(qtc_output_directory "qtcreator/lib/qtcreator/plugins")
@@ -142,7 +148,7 @@ jobs:
 
         foreach(package qtcreator qtcreator_dev)
           file(DOWNLOAD
-            "${qtc_base_url}/installer_source/${qtc_platform}/${package}.7z" ./${package}.7z SHOW_PROGRESS)
+            "${qtc_base_url}/${qtc_platform}/${package}.7z" ./${package}.7z SHOW_PROGRESS)
           execute_process(COMMAND
             ${CMAKE_COMMAND} -E tar xvf ../${package}.7z WORKING_DIRECTORY qtcreator)
         endforeach()
