--- a/.github/workflows/build_qmake.yml
+++ b/.github/workflows/build_qmake.yml
@@ -4,8 +4,8 @@ on: [push]
 
 env:
   QT_VERSION: 5.14.1
-  QT_CREATOR_VERSION: 4.12.0-beta1
-  QT_CREATOR_SNAPSHOT: latest
+  QT_CREATOR_VERSION: 4.12.0
+  QT_CREATOR_SNAPSHOT: NO
   PLUGIN_PRO: haskell.pro
   PLUGIN_NAME: Haskell
 
