Update github action for 4.13.0
Change-Id: Ic8abfe1a2a58a12bd1437775d2dd469c5a3352f2
Reviewed-by: Eike Ziller <eike.ziller@qt.io>

--- a/.github/workflows/build_qmake.yml
+++ b/.github/workflows/build_qmake.yml
@@ -3,9 +3,9 @@ name: QMake Build Matrix
 on: [push]
 
 env:
-  QT_VERSION: 5.14.2
-  QT_CREATOR_VERSION: 4.13.0-beta1
-  QT_CREATOR_SNAPSHOT: latest
+  QT_VERSION: 5.15.0
+  QT_CREATOR_VERSION: 4.13.0
+  QT_CREATOR_SNAPSHOT: NO
   PLUGIN_PRO: haskell.pro
   PLUGIN_NAME: Haskell
 
@@ -63,11 +63,11 @@ jobs:
         if ("${{ runner.os }}" STREQUAL "Windows")
           set(url_os "windows_x86")
           if ("${{ matrix.config.environment_script }}" MATCHES "vcvars64.bat")
-            set(qt_package_name "qt.qt5.${qt_version_dotless}.win64_msvc2017_64")
-            set(qt_dir_prefix "${qt_version}/msvc2017_64")
+            set(qt_package_name "qt.qt5.${qt_version_dotless}.win64_msvc2019_64")
+            set(qt_dir_prefix "${qt_version}/msvc2019_64")
           elseif ("${{ matrix.config.environment_script }}" MATCHES "vcvars32.bat")
-            set(qt_package_name "qt.qt5.${qt_version_dotless}.win32_msvc2017")
-            set(qt_dir_prefix "${qt_version}/msvc2017")
+            set(qt_package_name "qt.qt5.${qt_version_dotless}.win32_msvc2019")
+            set(qt_dir_prefix "${qt_version}/msvc2019")
           else()
           endif()
         elseif ("${{ runner.os }}" STREQUAL "Linux")
