--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -5,7 +5,7 @@ on: [push]
 env:
   PLUGIN_NAME: Haskell
   QT_VERSION: 5.15.2
-  QT_CREATOR_VERSION: 4.15.0-rc1
+  QT_CREATOR_VERSION: 4.15.0
   QT_CREATOR_SNAPSHOT: latest
   CMAKE_VERSION: 3.18.3
   NINJA_VERSION: 1.10.1
