--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -212,10 +212,16 @@ jobs:
 
         set(ENV{NINJA_STATUS} "[%f/%t %o/sec] ")
 
+        if("${{ runner.os }}" STREQUAL "macOS")
+          set(build_script "Qt Creator.app/Contents/Resources/scripts/build_plugin.py")
+        else()
+          set(build_script "share/qtcreator/scripts/build_plugin.py")
+        endif()
+
         execute_process(
           COMMAND python
             -u
-            ${{ steps.qt_creator.outputs.qtc_dir }}/scripts/build_plugin.py
+            ${{ steps.qt_creator.outputs.qtc_dir }}/${build_script}
             --name "$ENV{PLUGIN_NAME}-$ENV{QT_CREATOR_VERSION}-${{ matrix.config.artifact }}"
             --src .
             --build build
