Add simple wizard for creating a Haskell source/module file
Change-Id: Ieae69f981747af4fbf36919abc9604d8e190f207
Reviewed-by: Eike Ziller <eike.ziller@qt.io>

--- a/plugins/haskell/CMakeLists.txt
+++ b/plugins/haskell/CMakeLists.txt
@@ -20,3 +20,11 @@ add_qtc_plugin(Haskell
     optionspage.cpp optionspage.h
     stackbuildstep.cpp stackbuildstep.h
 )
+
+qtc_add_resources(Haskell haskell_wizards
+  PREFIX "/haskell"
+  BASE   share/wizards
+  FILES
+    module/file.hs
+    module/wizard.json
+)
