--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -5,8 +5,8 @@ on: [push]
 env:
   PLUGIN_NAME: Haskell
   QT_VERSION: 5.15.2
-  QT_CREATOR_VERSION: 5.0.0-rc1
-  QT_CREATOR_SNAPSHOT: latest
+  QT_CREATOR_VERSION: 5.0.0
+  QT_CREATOR_SNAPSHOT: NO
   CMAKE_VERSION: 3.21.1
   NINJA_VERSION: 1.10.2
 
