Add test to CMake build
Change-Id: I92f4f54dde76d8234f93d293e250045152bfb8fd
Reviewed-by: Cristian Adam <cristian.adam@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,8 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_CXX_STANDARD 17)
 
+find_package(QtCreator COMPONENTS Core REQUIRED)
+find_package(Qt5 COMPONENTS Widgets REQUIRED)
+
 add_subdirectory(plugins/haskell)
+add_subdirectory(tests/auto/tokenizer)
