--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -5,8 +5,8 @@ on: [push]
 env:
   PLUGIN_NAME: Haskell
   QT_VERSION: 6.2.3
-  QT_CREATOR_VERSION: 7.0.0-beta1
-  QT_CREATOR_SNAPSHOT: latest
+  QT_CREATOR_VERSION: 7.0.0
+  QT_CREATOR_SNAPSHOT: NO
   CMAKE_VERSION: 3.22.2
   NINJA_VERSION: 1.10.2
 
@@ -18,8 +18,8 @@ jobs:
       matrix:
         config:
         - {
-            name: "Windows Latest MSVC", artifact: "Windows-x64",
-            os: windows-latest,
+            name: "Windows MSVC 2019", artifact: "Windows-x64",
+            os: windows-2019,
             cc: "cl", cxx: "cl",
             environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat",
           }
